soc/qcom: add OCMEM driver
The OCMEM driver handles allocation and configuration of the On Chip
MEMory that is present on some snapdragon devices.

Devices which have OCMEM do not have GMEM inside the gpu core, so the
gpu must instead use OCMEM to be functional.  Since currently the gpu
is the only OCMEM user with an upstream driver, this is just a minimal
implementation sufficient for statically allocating to the gpu it's
chunk of OCMEM.

Signed-off-by: Rob Clark <robdclark@gmail.com>

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -74,3 +74,9 @@ config QCOM_WCNSS_CTRL
 	help
 	  Client driver for the WCNSS_CTRL SMD channel, used to download nv
 	  firmware to a newly booted WCNSS chip.
+
+config QCOM_OCMEM
+	tristate "Qualcomm OCMEM driver"
+	depends on QCOM_SMD
+	help
+	  Allocator for OCMEM (On Chip MEMory).
